setup environment
